Fix bug in copy correction when setting locals (bug 678620, r=sstangl).